--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
   <body>
     <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
+  <style>
+    body{
+      backgroun-color:coral
+         }
+  </style>
 </html>
