--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hi, I'm Hana!</title>
+    <title>Hana Sheikh</title>
   </head>
   <body>
+    <p>Hi, I'm Hana!</p>
     <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
   <style>
