--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </body>
   <style>
     body{
-      backgroun-color:coral
+      background-color:coral;
+      text-align: center
+      
          }
   </style>
 </html>
