--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+    
 <!doctype html>
 <html>
   <head>
-    <title>Hana Sheikh</title>
+    <title>Hi, I'm Hana!</title>
   </head>
   <body>
-    <p>Hi, I'm Hana!</p>
     <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
   <style>
     body{
-      backgroun-color:coral
+      background-color:coral;
+      text-align: center
+      
          }
   </style>
 </html>
