changed text color to white

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Hana Sheikh</title>
   </head>
   <body>
-    <p>Hi, I'm Hana!</p>
+    <p><strong>Hi, I'm Hana!</strong></p>
     <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
   <style>
     body{
       background-color:coral;
+      color: white
       text-align: center
       
          }
