--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </body>
   <style>
     body{
-      background-color:coral;
+      background-color:#FCF3CF;
       color: white
       text-align: center
       
