--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
     
 <!doctype html>
 <html>
-    <title>Hana Sheikh</title>
+    <head>
+      <title>Hana Sheikh</title>
+    </head>
   <body>
     <p><strong>Hi, I'm Hana!</strong></p>
     <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
