--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
   <body>
     <p><strong>Hi, I'm Hana!</strong></p>
-    <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
+    <p>I'm a student at UC Berkeley studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
   <style>
     body{
