--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Hi, I'm Hana!</title>
-  </head>
+    <head>
+      <title>Hana Sheikh</title>
+    </head>
   <body>
-    <p>I'm a student at UC Berkeley Studying computer science & data science. Here's what I've been working on lately:</p>
+    <p><strong>Hi, I'm Hana!</strong></p>
+    <p>I'm a student at UC Berkeley studying computer science & data science. Here's what I've been working on lately:</p>
   </body>
   <style>
     body{
-      background-color:coral;
+      background-color:#FCF3CF;
+      color: white
       text-align: center
       
          }
