--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body{
       background-color:#FCF3CF;
-      color: white
+      color: white;
       text-align: center
       
          }
