--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body{
       background-color:#FCF3CF;
-      color: white
+      color: white;
       text-align: center
       
          }
