--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <body>
     <p><strong>Hi, I'm Hana!</strong></p>
     <p>I'm a student at UC Berkeley studying computer science & data science. Here's what I've been working on lately:</p>
+    <p>My previous experiences:</p>
   </body>
   <style>
     body{
-      background-color:#FCF3CF;
+      background-color:#FFD546;
       color: white;
       text-align: center
       
