--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </body>
   <style>
     body{
-      background-color:#FFD546;
-      color: white;
+      background-color:#B5DAF7;
+      color: #EA5E5C;
       text-align: center
       
          }
